--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "sonofjorel"
 facebook:
   username               :
   app_id                 :
